--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
     <nav id="navbar">
         <ul>
-            <li><a href="#">About me</a></li>
+            <li><a href="#about-me">About me</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#">Education</a></li>
-            <li><a href="#">Skills</a></li>
             <li><a href="#">Experiance</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     
-    <section class="sec-1">
+    <section id="about-me" class="sec-1">
         <article>
             <p>
                 Hello world,<br>
@@ -35,7 +35,7 @@
         </article>
     </section>
 
-    <section class="sec-2">
+    <section id="skills" class="sec-2">
         <article>
             <h2>Skills</h2>
             <ul>
