--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         </article>
     </section>
 
+    <div class="fixed-bg">
+
     <section id="skills" class="sec-2">
         <article>
             <h2>Skills</h2>
@@ -49,6 +51,14 @@
             </ul>
         </article>
     </section>
+
+    <section class="sec-3">
+        <article>
+            under construnction, come back in a week :)
+        </article>
+    </section>
+
+    </div>
 
 </body>
 </html>
