--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="#about-me">About me</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#">Education</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#">Experiance</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
@@ -52,9 +52,20 @@
         </article>
     </section>
 
-    <section class="sec-3">
+    <section id="education" class="sec-3">
         <article>
-            under construnction, come back in a week :)
+            <h2>Education</h2>
+            <ul>
+                <li>
+                    <h3>Sathyabama Institute of Science and Technology</h3>
+                    <p>Chennai 2020 - 2024</p>
+                </li>
+                <br>
+                <li>
+                    <h3>Vidya Vikasini Matriculation Higher Secondary School</h3>
+                    <p>Coimbatore 2018 - 2020</p>
+                </li>
+            </ul>
         </article>
     </section>
 
