--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <li><a href="#about-me">About me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#">Experiance</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     
@@ -69,6 +69,10 @@
         </article>
     </section>
 
+    <section id="works" class="sec-4">
+        still under construction :)
+
+    </section>
     </div>
 
 </body>
