--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#about-me">About me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="#works">Works and contributions</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -69,9 +69,54 @@
         </article>
     </section>
 
-    <section id="works" class="sec-4">
-        still under construction :)
-
+    <section id="works-and-contributions" class="sec-4">
+        <!-- dsc discord bot
+        gogh theme
+        notebookofproblems
+        blogs -->
+        <article>
+            <h2>Works</h2>
+            <ul>
+                <li>
+                    <h3><a href="#">NoteIt</a></h3>
+                    <p>Terminal based note taking application</p>
+                </li>
+                <li>
+                    <h3><a href="#">DSA</a></h3>
+                    <p>Data strucutres and algorithm code</p>
+                </li>
+                <li>
+                    <h3><a href="#">Encrypter</a></h3>
+                    <p>Implementation of caesar encryption</p>
+                </li>
+                <li>
+                    <h3><a href="#">Morse code generator</a></h3>
+                    <p>Generates morse code(audio) for user input</p>
+                </li>
+                <li>
+                    <h3><a href="#">Stone paper scissor</a></h3>
+                    <p>Stone paper scissor in terminal</p>
+                </li>
+            </ul>
+            <h2>Contributions</h2>
+            <ul>
+                <li>
+                    <a href="#">Wallux</a>
+                </li>
+                <li>
+                    <a href="#">Placid</a>
+                </li>
+                <li>
+                    <a href="#">DSC dicord bot</a>
+                </li>
+                <li>
+                    <a href="#">Gogh theme</a>
+                </li>
+                <li>
+                    <a href="#">notebookofproblems</a>
+                </li>
+            </ul>
+        </article>
     </section>
     </div>
 
