add contribution css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#about-me">About me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#works">Works and contributions</a></li>
+            <li><a href="#works-and-contributions">Works and contributions</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -99,7 +99,7 @@
                 </li>
             </ul>
             <h2>Contributions</h2>
-            <ul>
+            <ul class="sec-4-list-2">
                 <li>
                     <a href="#">Wallux</a>
                 </li>
