add contribution links

--- a/index.html
+++ b/index.html
@@ -70,50 +70,51 @@
     </section>
 
     <section id="works-and-contributions" class="sec-4">
-        <!-- dsc discord bot
-        gogh theme
-        notebookofproblems
-        blogs -->
         <article>
             <h2>Works</h2>
             <ul>
                 <li>
-                    <h3><a href="#">NoteIt</a></h3>
+                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/Note-It">NoteIt</a></h3>
                     <p>Terminal based note taking application</p>
                 </li>
                 <li>
-                    <h3><a href="#">DSA</a></h3>
+                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/DSA">DSA</a></h3>
                     <p>Data strucutres and algorithm code</p>
                 </li>
                 <li>
-                    <h3><a href="#">Encrypter</a></h3>
+                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/EncyptorGUI">Encrypter</a></h3>
                     <p>Implementation of caesar encryption</p>
                 </li>
                 <li>
-                    <h3><a href="#">Morse code generator</a></h3>
+                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/morsecodegen-tkinter">Morse code generator</a></h3>
                     <p>Generates morse code(audio) for user input</p>
                 </li>
                 <li>
-                    <h3><a href="#">Stone paper scissor</a></h3>
+                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/stone-paper-scissor">Stone paper scissor</a></h3>
                     <p>Stone paper scissor in terminal</p>
                 </li>
             </ul>
             <h2>Contributions</h2>
-            <ul class="sec-4-list-2">
+            <ul>
                 <li>
-                    <a href="#">Wallux</a>
+                    <h3><a target="_blank" href="https://github.com/Wallux-0/Wallux">Wallux</a></h3>
+                    <p>Wallpaper collection for linux (Platforms: Linux(CLI and GUI), android application)</p>
                 </li>
                 <li>
-                    <a href="#">Placid</a>
+                    <h3><a target="_blank" href="#">Placid</a></h3>
+                    <p>Chat with therapists</p>
                 </li>
                 <li>
-                    <a href="#">DSC dicord bot</a>
+                    <h3><a target="_blank" href="https://github.com/DSC-SIST/Discord-Bot">DSC dicord bot</a></h3>
+                    <p>A discord bot for DSC-SIST discord server</p>
                 </li>
                 <li>
-                    <a href="#">Gogh theme</a>
+                    <h3><a target="_blank" href="https://github.com/Mayccoll/Gogh/blob/master/themes/morada.sh">Morada terminal theme</a></h3>
+                    <p>Purplish/Bluish theme for your terminal (Available in <a href="https://mayccoll.github.io/Gogh/">gogh</a></p>
                 </li>
                 <li>
-                    <a href="#">notebookofproblems</a>
+                    <h3><a target="_blank" href="https://github.com/nanna7077/notebookofproblems">notebookofproblems</a></h3>
+                    <p>Collection of coding problems</p>
                 </li>
             </ul>
         </article>
