waasted 1 hr to revert back to where it started lol

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Sriram Vasudevan</title>
+    <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css”>
 </head>
 <body>
 
@@ -120,8 +120,8 @@
         </article>
     </section>
     
-    <section class="sec-5">
-
+    <section id="contact" class="sec-5">
+        
     </section>
 
     </div>
