add contact grids

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css”>
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous"></head>
 <body>
 
     <header>
@@ -101,7 +100,7 @@
                     <p>Wallpaper collection for linux (Platforms: Linux(CLI and GUI), android application)</p>
                 </li>
                 <li>
-                    <h3><a target="_blank" href="#">Placid</a></h3>
+                    <h3><a target="_blank" href="https://github.com/Tharunya07/placid-app">Placid</a></h3>
                     <p>Chat with therapists</p>
                 </li>
                 <li>
@@ -121,7 +120,13 @@
     </section>
     
     <section id="contact" class="sec-5">
-        
+        <h2>Feel free to reach out to me via:</h2>
+        <div>
+            <i class="fa fa-envelope fa-4x"></i>
+            <i class="fa fa-discord fa-4x"></i>
+            <i class="fa fa-twitter fa-4x"></i>
+            <i class="fa fa-github fa-4x"></i>
+        </div>
     </section>
 
     </div>
