add profile links

--- a/index.html
+++ b/index.html
@@ -116,22 +116,31 @@
                     <p>Collection of coding problems</p>
                 </li>
             </ul>
+            <h2>Blogs</h2>
+            <ul>
+                <li>
+                    <h3><a target="_blank" href="https://sriram2002.medium.com/make-your-python-code-shorter-937ba51de187?source=your_stories_page-------------------------------------">Make your python code shorter</a></h3>
+                </li>
+                <br>
+                <li>
+                    <h3><a target="_blank" href="https://sriram2002.medium.com/5-mistakes-to-avoid-in-your-first-project-ef52be68aaf1?source=your_stories_page-------------------------------------">5 mistakes to avoid in your first project</a></h3>
+                </li>
+            </ul>
         </article>
     </section>
     
     <section id="contact" class="sec-5">
         <h2>Feel free to reach out to me via:</h2>
         <div>
-            <i class="fa fa-envelope fa-4x"></i>
-            <i class="fa fa-discord fa-4x"></i>
-            <i class="fa fa-twitter fa-4x"></i>
-            <i class="fa fa-github fa-4x"></i>
+            <a target="_blank" href="mailto:srriram2002.31@gmail.com"></a><i class="fa fa-envelope fa-4x"></i></a>
+            <a target="_blank" href="https://discordapp.com/users/576274954367139850/"></a><i class="fa fa-discord fa-4x"></i></a>
+            <a target="_blank" href="https://twitter.com/Sriram_31_?t=jruCfgXdkYG8LtihMqVATw&s=09"></a><i class="fa fa-twitter fa-4x"></i></a>
+            <a target="_blank" href="https://twitter.com/Sriram_31_?t=jruCfgXdkYG8LtihMqVATw&s=09"></a><i class="fa fa-github fa-4x"></i></a>
         </div>
     </section>
 
     </div>
 
-    <footer>dkfjhg</footer>
 
 </body>
 </html>
