--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#about-me">About me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#works-and-contributions">Works and contributions</a></li>
+            <li><a href="#works-and-contributions">Works, contributions and blogs</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -132,10 +132,10 @@
     <section id="contact" class="sec-5">
         <h2>Feel free to reach out to me via:</h2>
         <div>
-            <a target="_blank" href="mailto:srriram2002.31@gmail.com"></a><i class="fa fa-envelope fa-4x"></i></a>
-            <a target="_blank" href="https://discordapp.com/users/576274954367139850/"></a><i class="fa fa-discord fa-4x"></i></a>
-            <a target="_blank" href="https://twitter.com/Sriram_31_?t=jruCfgXdkYG8LtihMqVATw&s=09"></a><i class="fa fa-twitter fa-4x"></i></a>
-            <a target="_blank" href="https://twitter.com/Sriram_31_?t=jruCfgXdkYG8LtihMqVATw&s=09"></a><i class="fa fa-github fa-4x"></i></a>
+            <a target="_blank" href="mailto:srriram2002.31@gmail.com"><i class="fa fa-envelope fa-4x"></i></a>
+            <a target="_blank" href="https://discordapp.com/users/576274954367139850/"><i class="fa fa-discord fa-4x"></i></a>
+            <a target="_blank" href="https://twitter.com/Sriram_31_?t=jruCfgXdkYG8LtihMqVATw&s=09"><i class="fa fa-twitter fa-4x"></i></a>
+            <a target="_blank" href="https://twitter.com/Sriram_31_?t=jruCfgXdkYG8LtihMqVATw&s=09"><i class="fa fa-github fa-4x"></i></a>
         </div>
     </section>
 
