add download resume

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#works-and-contributions">Works, contributions and blogs</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="static/resume/Resume.pdf" download="Sriram_Vasudevan_resume.pdf">Download résumé</a></li>
         </ul>
     </nav>
     
