--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div>
             <a target="_blank" href="mailto:srriram2002.31@gmail.com"><i class="fa fa-envelope fa-4x"></i></a>
             <a target="_blank" href="https://discordapp.com/users/576274954367139850/"><i class="fa fa-discord fa-4x"></i></a>
-            <a target="_blank" href="https://twitter.com/Sriram_31_?t=jruCfgXdkYG8LtihMqVATw&s=09"><i class="fa fa-twitter fa-4x"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/sriram-vasudevan-0812"><i class="fa fa-linkedin fa-4x"></i></a>
             <a target="_blank" href="https://github.com/Sriram-bb63"><i class="fa fa-github fa-4x"></i></a>
         </div>
     </section>
