fix resume link

--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
             <a target="_blank" href="https://www.linkedin.com/in/sriram-vasudevan-0812"><i class="fa fa-linkedin fa-4x"></i></a>
             <a target="_blank" href="https://github.com/Sriram-bb63"><i class="fa fa-github fa-4x"></i></a>
         </div>
+        <br>
+        <p id="resume-phone"><a href="static/resume/Resume.pdf" download="Sriram_Vasudevan_resume.pdf">Download résumé</a></p>
     </section>
 
     </div>
