Add ipynb to skills sec

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="static/resume/Resume.pdf" download="Sriram_Vasudevan_resume.pdf">Download résumé</a></li>
         </ul>
     </nav>
-    
+
     <section id="about-me" class="sec-1">
         <article>
             <p>
@@ -49,6 +49,7 @@
                 <li>SQL</li>
                 <li>Linux</li>
                 <li>Git</li>
+                <li>Jupyter notebook</li>
             </ul>
         </article>
     </section>
@@ -130,7 +131,7 @@
             </ul>
         </article>
     </section>
-    
+
     <section id="contact" class="sec-5">
         <h2>Feel free to reach out to me via:</h2>
         <div>
