--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Flask</li>
+                <li>Pandas</li>
                 <li>SQL</li>
                 <li>Linux</li>
                 <li>Git</li>
@@ -145,7 +146,6 @@
     </section>
 
     </div>
-
 
 </body>
 </html>
