--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
             <h2>Skills</h2>
             <ul>
                 <li>Python</li>
-                <li>HTML</li>
-                <li>CSS</li>
+                <li>HTML & CSS</li>
                 <li>Flask</li>
                 <li>SQL</li>
                 <li>Linux</li>
-                <li>Git</li>
+                <li>Git & github</li>
                 <li>Jupyter notebook</li>
             </ul>
         </article>
