--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                     <p>Implementation of caesar encryption</p>
                 </li>
                 <li>
-                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/morsecodegen-tkinter">Morse code generator</a></h3>
-                    <p>Generates morse code(audio) for user input</p>
+                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/Linear-regression">Linear regression</a></h3>
+                    <p>Implementation and visualization of linear regression model</p>
                 </li>
                 <li>
-                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/stone-paper-scissor">Stone paper scissor</a></h3>
-                    <p>Stone paper scissor in terminal</p>
+                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/Temperature-log">Temperature logger</a></h3>
+                    <p>PC resource logger</p>
                 </li>
             </ul>
             <h2>Contributions</h2>
