--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         <article>
             <p>
                 Hello world,<br>
-                My name is Sriram Vasudevan. You can call me Sriram.
-                I am a 2nd year Computer Science student from Chennai.
-                I am doing my Bachelor of Engineering in Sathyabama Institute of Science and Technology, Chennai.
+                My name is Sriram Vasudevan.
+                I am a 2<sup>nd</sup> year computer science student from Sathyabama Institute of Science and Technology.
             </p>
         </article>
     </section>
@@ -93,7 +92,7 @@
                 </li>
                 <li>
                     <h3><a target="_blank" href="https://github.com/Sriram-bb63/Temperature-log">Temperature logger</a></h3>
-                    <p>PC resource logger</p>
+                    <p>PC resource logger with live graphing options</p>
                 </li>
             </ul>
             <h2>Contributions</h2>
@@ -112,7 +111,7 @@
                 </li>
                 <li>
                     <h3><a target="_blank" href="https://github.com/Mayccoll/Gogh/blob/master/themes/morada.sh">Morada terminal theme</a></h3>
-                    <p>Purplish/Bluish theme for your terminal (Available in <a href="https://mayccoll.github.io/Gogh/">gogh</a></p>
+                    <p>Purplish/Bluish theme for your terminal (Available in <a href="https://mayccoll.github.io/Gogh/">gogh</a>)</p>
                 </li>
                 <li>
                     <h3><a target="_blank" href="https://github.com/nanna7077/notebookofproblems">notebookofproblems</a></h3>
