--- a/index.html
+++ b/index.html
@@ -4,146 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
     <link rel="icon" href="static/profile-icon.svg">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous"></head>
     <link rel="stylesheet" href="style.css">
+    <title>Siram Vasudevan</title>
+</head>
 <body>
-
-    <header>
-        <h1>Sriram Vasudevan</h1>
-    </header>
-
-    <nav id="navbar">
-        <ul>
-            <li><a href="#about-me">About me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#works-and-contributions">Works, contributions and blogs</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="static/resume/Resume.pdf" download="Sriram_Vasudevan_resume.pdf">Download résumé</a></li>
-        </ul>
-    </nav>
-
-    <section id="about-me" class="sec-1">
-        <article>
-            <p>
-                Hello world,<br>
-                My name is Sriram Vasudevan.
-                I am a 2<sup>nd</sup> year computer science student from Sathyabama Institute of Science and Technology.
-            </p>
-        </article>
+    <section class="first-section" id="first-section">
+        <h1><span>Sriram</span> Vasudevan</h1>
+        <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon.svg" alt=""></a>
     </section>
-
-    <div class="fixed-bg">
-
-    <section id="skills" class="sec-2">
-        <article>
-            <h2>Skills</h2>
-            <ul>
-                <li>Python</li>
-                <li>HTML & CSS</li>
-                <li>Flask</li>
-                <li>Pandas</li>
-                <li>SQL</li>
-                <li>Linux</li>
-                <li>Git & github</li>
-                <li>Jupyter notebook</li>
-            </ul>
-        </article>
-    </section>
-
-    <section id="education" class="sec-3">
-        <article>
-            <h2>Education</h2>
-            <ul>
-                <li>
-                    <h3>Sathyabama Institute of Science and Technology</h3>
-                    <p>Chennai 2020 - 2024</p>
-                </li>
-                <br>
-                <li>
-                    <h3>Vidya Vikasini Matriculation Higher Secondary School</h3>
-                    <p>Coimbatore 2018 - 2020</p>
-                </li>
-            </ul>
-        </article>
-    </section>
-
-    <section id="works-and-contributions" class="sec-4">
-        <article>
-            <h2>Works</h2>
-            <ul>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/Note-It">NoteIt</a></h3>
-                    <p>Terminal based note taking application</p>
-                </li>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/DSA">DSA</a></h3>
-                    <p>Data strucutres and algorithm code</p>
-                </li>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/chennai-rail-map">Chennai rail transportation map</a></h3>
-                    <p>Map of all rail based transportation system in Chennai</p>
-                </li>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/Linear-regression">Linear regression</a></h3>
-                    <p>Implementation and visualization of linear regression model</p>
-                </li>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/Sriram-bb63/Temperature-log">Temperature logger</a></h3>
-                    <p>PC resource logger with live graphing options</p>
-                </li>
-            </ul>
-            <h2>Contributions</h2>
-            <ul>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/Wallux-0/Wallux">Wallux</a></h3>
-                    <p>Wallpaper collection for linux (Platforms: Linux(CLI and GUI), android application)</p>
-                </li>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/Tharunya07/placid-app">Placid</a></h3>
-                    <p>Chat with therapists</p>
-                </li>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/DSC-SIST/Discord-Bot">DSC dicord bot</a></h3>
-                    <p>A discord bot for DSC-SIST discord server</p>
-                </li>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/Mayccoll/Gogh/blob/master/themes/morada.sh">Morada terminal theme</a></h3>
-                    <p>Purplish/Bluish theme for your terminal (Available in <a href="https://mayccoll.github.io/Gogh/">gogh</a>)</p>
-                </li>
-                <li>
-                    <h3><a target="_blank" href="https://github.com/nanna7077/notebookofproblems">notebookofproblems</a></h3>
-                    <p>Collection of coding problems</p>
-                </li>
-            </ul>
-            <h2>Blogs</h2>
-            <ul>
-                <li>
-                    <h3><a target="_blank" href="https://sriram2002.medium.com/make-your-python-code-shorter-937ba51de187?source=your_stories_page-------------------------------------">Make your python code shorter</a></h3>
-                </li>
-                <br>
-                <li>
-                    <h3><a target="_blank" href="https://sriram2002.medium.com/5-mistakes-to-avoid-in-your-first-project-ef52be68aaf1?source=your_stories_page-------------------------------------">5 mistakes to avoid in your first project</a></h3>
-                </li>
-            </ul>
-        </article>
-    </section>
-
-    <section id="contact" class="sec-5">
-        <h2>Feel free to reach out to me via:</h2>
-        <div>
-            <a target="_blank" href="mailto:srriram2002.31@gmail.com"><i class="fa fa-envelope fa-4x"></i></a>
-            <a target="_blank" href="https://discordapp.com/users/576274954367139850/"><i class="fa fa-discord fa-4x"></i></a>
-            <a target="_blank" href="https://www.linkedin.com/in/sriram-vasudevan-0812"><i class="fa fa-linkedin fa-4x"></i></a>
-            <a target="_blank" href="https://github.com/Sriram-bb63"><i class="fa fa-github fa-4x"></i></a>
-        </div>
-        <br>
-        <p id="resume-phone"><a href="static/resume/Resume.pdf" download="Sriram_Vasudevan_resume.pdf">Download résumé</a></p>
-    </section>
-
-    </div>
-
+    <section class="second-section" id="second-section"></section>
+    <section class="third-section" id="third-section"></section>
 </body>
 </html>
