second section over

--- a/index.html
+++ b/index.html
@@ -10,10 +10,34 @@
 </head>
 <body>
     <section class="first-section" id="first-section">
-        <h1><span>Sriram</span> Vasudevan</h1>
-        <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon.svg" alt=""></a>
+        <h1>Sriram <span>Vasudevan</span></h1>
+        <a href="#second-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
     </section>
-    <section class="second-section" id="second-section"></section>
+    <section class="second-section" id="second-section">
+        <a href="#first-section"><img class="scroll-icon-up" src="static/scroll-icon.svg" alt=""></a>
+        <div class="skills">
+            <div class="skill-part-1">
+                <p>Python</p>
+                <p>HTML, CSS and SASS</p>
+                <p>Flask</p>
+                <p>Pandas</p>
+                <p>Scikit learn</p>
+                <p>Matplotlib</p>
+                <p>Git and github</p>
+                <p>Streamlit</p>
+                <p>Placeholder</p>
+                <p>Some skill</p>
+                <p>Linux</p>
+            </div>
+            <div class="skill-part-2">
+                <p>}</p>
+            </div>
+            <div class="skill-part-3">
+                <h1>Skills</h1>
+            </div>
+        </div>
+        <a href="#third-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
+    </section>
     <section class="third-section" id="third-section"></section>
 </body>
 </html>
