create bio section

--- a/index.html
+++ b/index.html
@@ -10,11 +10,28 @@
 </head>
 <body>
     <section class="first-section" id="first-section">
+        <h1>PAGE UNDER CONSTRUCTION</h1>
         <h1>Sriram <span>Vasudevan</span></h1>
         <a href="#second-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
     </section>
     <section class="second-section" id="second-section">
         <a href="#first-section"><img class="scroll-icon-up" src="static/scroll-icon.svg" alt=""></a>
+        <div class="out">
+            <div class="in">
+                <p>Hello world&#128075;</p>
+                <p>
+                    I am persuing my UG degree in Computer Science and Engineering with specialization in Artificial Intelligence (2020-24)
+                    at Sathyabama Insititute of Science and Technology, Chennai, India. I am interested in
+                    machine learning and data science. I convert my ideas into working applications
+                    from time to time. I am looking forward to diversify my skills and work on industry level
+                    projects. You can find some of the technologies I am confident in below
+                </p>
+            </div>
+        </div>
+        <a href="#third-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
+    </section>
+    <section class="third-section" id="third-section">
+        <a href="#second-section"><img class="scroll-icon-up" src="static/scroll-icon.svg" alt=""></a>
         <div class="skills">
             <div class="skill-part-1">
                 <p>Python</p>
@@ -36,8 +53,8 @@
                 <h1>Skills</h1>
             </div>
         </div>
-        <a href="#third-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
+        <a href="#fourth-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
     </section>
-    <section class="third-section" id="third-section"></section>
+    <section class="fourth-section" id="fourth-section"></section>
 </body>
 </html>
