--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section class="first-section" id="first-section">
-        <h1>PAGE UNDER CONSTRUCTION</h1>
+        <!-- <h1>PAGE UNDER CONSTRUCTION</h1> -->
         <h1>Sriram <span>Vasudevan</span></h1>
         <a href="#second-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
     </section>
@@ -24,7 +24,8 @@
                     at Sathyabama Insititute of Science and Technology, Chennai, India. I am interested in
                     machine learning and data science. I convert my ideas into working applications
                     from time to time. I am looking forward to diversify my skills and work on industry level
-                    projects. You can find some of the technologies I am confident in below
+                    projects. I want to keep learning, challenge myself and do interesting things that matter.
+                    My skill set include but is not limited to the following listed below
                 </p>
             </div>
         </div>
