change colors again

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
         <div class="out">
             <div class="in">
                 <p>Hello world&#128075;</p>
-                <p>
+                <!-- <p>
                     I am persuing my UG degree in Computer Science and Engineering with specialization in Artificial Intelligence (2020-24)
                     at Sathyabama Insititute of Science and Technology, Chennai, India. I am interested in
                     machine learning and data science. I convert my ideas into working applications
                     from time to time. I am looking forward to diversify my skills and work on industry level
                     projects. I want to keep learning, challenge myself and do interesting things that matter.
                     My skill set include but is not limited to the following listed below
+                </p> -->
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe ducimus rerum odit mollitia quis sequi dicta sed quibusdam doloremque praesentium. Quos deleniti non, perspiciatis voluptatibus blanditiis beatae dolores sequi voluptates.
                 </p>
             </div>
         </div>
@@ -35,7 +38,7 @@
         <a href="#second-section"><img class="scroll-icon-up" src="static/scroll-icon.svg" alt=""></a>
         <div class="skills">
             <div class="skill-part-1">
-                <p>Python</p>
+                <!-- <p>Python</p>
                 <p>HTML, CSS and SASS</p>
                 <p>Flask</p>
                 <p>Pandas</p>
@@ -45,7 +48,18 @@
                 <p>Streamlit</p>
                 <p>Placeholder</p>
                 <p>Some skill</p>
-                <p>Linux</p>
+                <p>Linux</p> -->
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
+                <p>placeholder</p>
             </div>
             <div class="skill-part-2">
                 <p>}</p>
