--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section class="first-section" id="first-section">
         <!-- <h1>PAGE UNDER CONSTRUCTION</h1> -->
         <h1>Sriram <span>Vasudevan</span></h1>
-        <a href="#second-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
+        <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
     </section>
     <section class="second-section" id="second-section">
-        <a href="#first-section"><img class="scroll-icon-up" src="static/scroll-icon.svg" alt=""></a>
+        <a href="#first-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
         <div class="out">
             <div class="in">
                 <p>Hello world&#128075;</p>
@@ -32,10 +32,10 @@
                 </p>
             </div>
         </div>
-        <a href="#third-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
+        <a href="#third-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
     </section>
     <section class="third-section" id="third-section">
-        <a href="#second-section"><img class="scroll-icon-up" src="static/scroll-icon.svg" alt=""></a>
+        <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
         <div class="skills">
             <div class="skill-part-1">
                 <!-- <p>Python</p>
@@ -68,8 +68,25 @@
                 <h1>Skills</h1>
             </div>
         </div>
-        <a href="#fourth-section"><img class="scroll-icon-down" src="static/scroll-icon.svg" alt=""></a>
+        <a href="#fourth-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
     </section>
-    <section class="fourth-section" id="fourth-section"></section>
+    <section class="fourth-section" id="fourth-section">
+        <a href="#third-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
+        <div class="contact">
+            <div class="contact-part-1">
+                <h1>Contact me</h1>
+            </div>
+            <div class="contact-part-2">
+                <p>{</p>
+            </div>
+            <div class="contact-part-3">
+                <a href="mailto:srriram2002.31@gmail.com"><img src="static/gmail.svg" alt="gmail"></a>
+                <a href="https://github.com/Sriram-bb63"><img src="static/github.svg" alt="github"></a>
+                <a href="discordapp.com/users/Sriram#8741"><img src="static/discord.svg" alt="discord"></a>
+                <a href="https://www.linkedin.com/in/sriram-vasudevan-0812/"><img src="static/linkedin.svg" alt="linkedin"></a>
+            </div>
+        </div>
+        <a href="#first-section"><img class="scroll-icon" src="static/double-scoll.svg" alt=""></a>
+    </section>
 </body>
 </html>
