redo skills section

--- a/index.html
+++ b/index.html
@@ -19,26 +19,28 @@
         <div class="out">
             <div class="in">
                 <p>Hello world&#128075;</p>
-                <!-- <p>
+                <p>
                     I am persuing my UG degree in Computer Science and Engineering with specialization in Artificial Intelligence (2020-24)
                     at Sathyabama Insititute of Science and Technology, Chennai, India. I am interested in
                     machine learning and data science. I convert my ideas into working applications
                     from time to time. I am looking forward to diversify my skills and work on industry level
                     projects. I want to keep learning, challenge myself and do interesting things that matter.
-                    My skill set include but is not limited to the following listed below
-                </p> -->
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe ducimus rerum odit mollitia quis sequi dicta sed quibusdam doloremque praesentium. Quos deleniti non, perspiciatis voluptatibus blanditiis beatae dolores sequi voluptates.
+                    My skill set includes but is not limited to the following:
                 </p>
+                <!-- <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe ducimus rerum odit mollitia quis sequi dicta sed quibusdam doloremque praesentium. Quos deleniti non, perspiciatis voluptatibus blanditiis beatae dolores sequi voluptates.
+                </p> -->
             </div>
         </div>
         <a href="#third-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
     </section>
     <section class="third-section" id="third-section">
         <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
-        <div class="skills">
+        <!-- <div class="skills">
+
+
             <div class="skill-part-1">
-                <!-- <p>Python</p>
+                <p>Python</p>
                 <p>HTML, CSS and SASS</p>
                 <p>Flask</p>
                 <p>Pandas</p>
@@ -48,7 +50,7 @@
                 <p>Streamlit</p>
                 <p>Placeholder</p>
                 <p>Some skill</p>
-                <p>Linux</p> -->
+                <p>Linux</p>
                 <p>placeholder</p>
                 <p>placeholder</p>
                 <p>placeholder</p>
@@ -67,8 +69,17 @@
             <div class="skill-part-3">
                 <h1>Skills</h1>
             </div>
+        </div> -->
+        <div class="skills">
+            <div class="left">
+                <p>Python is the main language I code in, its versatility being the principal reason. I can design and build websites using my frontend skills (HTML, CSS and SASS) and I can convert static websites into web applications using the flask library. I have also worked with MariaDB and SQLite in the past. During my internship at Samsung, I gained experience in data handling and data visualization using libraries like NumPy, pandas and Matplotlib. I am capable of create machine learning models using the scikit-learn library. I am comfortable with git and GitHub, Linux terminal and other CLIs. I have knowledge on DSA and I can implement various algorithms in other languages like C and C++ too.</p>
+            </div>
+            <div class="right">
+                <h1>Skills and experience</h1>
+            </div>
         </div>
         <a href="#fourth-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
+
     </section>
     <section class="fourth-section" id="fourth-section">
         <a href="#third-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
