fix height problems

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <section class="first-section" id="first-section">
-        <!-- <h1>PAGE UNDER CONSTRUCTION</h1> -->
         <h1>Sriram <span>Vasudevan</span></h1>
         <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
     </section>
@@ -27,49 +26,12 @@
                     projects. I want to keep learning, challenge myself and do interesting things that matter.
                     My skill set includes but is not limited to the following:
                 </p>
-                <!-- <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe ducimus rerum odit mollitia quis sequi dicta sed quibusdam doloremque praesentium. Quos deleniti non, perspiciatis voluptatibus blanditiis beatae dolores sequi voluptates.
-                </p> -->
             </div>
         </div>
         <a href="#third-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
     </section>
     <section class="third-section" id="third-section">
         <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
-        <!-- <div class="skills">
-
-
-            <div class="skill-part-1">
-                <p>Python</p>
-                <p>HTML, CSS and SASS</p>
-                <p>Flask</p>
-                <p>Pandas</p>
-                <p>Scikit learn</p>
-                <p>Matplotlib</p>
-                <p>Git and github</p>
-                <p>Streamlit</p>
-                <p>Placeholder</p>
-                <p>Some skill</p>
-                <p>Linux</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-                <p>placeholder</p>
-            </div>
-            <div class="skill-part-2">
-                <p>}</p>
-            </div>
-            <div class="skill-part-3">
-                <h1>Skills</h1>
-            </div>
-        </div> -->
         <div class="skills">
             <div class="left">
                 <p><span class="mono">Python</span> is the main language I code in, its versatility being the principal reason. I can design and build websites using my frontend skills (<span class="mono">HTML</span>, <span class="mono">CSS</span> and <span class="mono">SASS/SCSS</span>) and I can convert static websites into web applications using <span class="mono">Flask</span>. I have also worked with <span class="mono">MariaDB</span> and <span class="mono">SQLite</span> in the past. During my internship at Samsung, I gained experience in data handling and data visualization using libraries like <span class="mono">NumPy</span>, <span class="mono">pandas</span> and <span class="mono">Matplotlib</span>. I am capable of create machine learning models using the <span class="mono">scikit-learn</span> library. I am comfortable with <span class="mono">git</span> and <span class="mono">GitHub</span>, <span class="mono">Linux terminal</span> and other <span class="mono">CLIs</span>. I have knowledge on <span class="mono">DSA</span> and I can implement various algorithms in other languages like <span class="mono">C</span> and <span class="mono">C++</span> too.</p>
@@ -91,9 +53,9 @@
                 <p>{</p>
             </div>
             <div class="contact-part-3">
-                <a href="mailto:srriram2002.31@gmail.com"><img src="static/gmail.svg" alt="gmail"></a>
-                <a href="https://github.com/Sriram-bb63"><img src="static/github.svg" alt="github"></a>
-                <a href="discordapp.com/users/Sriram#8741"><img src="static/discord.svg" alt="discord"></a>
+                <a href="mailto:srriram2002.31@gmail.com"><img src="static/gmail.svg" alt="gmail"></a><br>
+                <a href="https://github.com/Sriram-bb63"><img src="static/github.svg" alt="github"></a><br>
+                <a href="discordapp.com/users/Sriram#8741"><img src="static/discord.svg" alt="discord"></a><br>
                 <a href="https://www.linkedin.com/in/sriram-vasudevan-0812/"><img src="static/linkedin.svg" alt="linkedin"></a>
             </div>
         </div>
