fixed discord user link

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
             <div class="in">
                 <p>Hello world&#128075;</p>
                 <p>
-                    I am persuing my UG degree in Computer Science and Engineering with specialization in Artificial Intelligence (2020-24)
+                    I am pursuing my UG degree in Computer Science and Engineering with specialization in Artificial Intelligence (2020-24)
                     at Sathyabama Insititute of Science and Technology, Chennai, India. I am interested in
                     machine learning and data science. I convert my ideas into working applications
                     from time to time. I am looking forward to diversify my skills and work on industry level
                     projects. I want to keep learning, challenge myself and do interesting things that matter.
-                    My skill set includes but is not limited to the following:
                 </p>
             </div>
         </div>
@@ -55,7 +54,7 @@
             <div class="contact-part-3">
                 <a href="mailto:srriram2002.31@gmail.com"><img src="static/gmail.svg" alt="gmail"></a><br>
                 <a href="https://github.com/Sriram-bb63"><img src="static/github.svg" alt="github"></a><br>
-                <a href="discordapp.com/users/Sriram#8741"><img src="static/discord.svg" alt="discord"></a><br>
+                <a href="https://discordapp.com/users/576274954367139850"><img src="static/discord.svg" alt="discord"></a><br>
                 <a href="https://www.linkedin.com/in/sriram-vasudevan-0812/"><img src="static/linkedin.svg" alt="linkedin"></a>
             </div>
         </div>
