--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     machine learning and data science. I convert my ideas into working applications
                     from time to time. I am looking forward to diversify my skills and work on industry level
                     projects. I want to keep learning, challenge myself and do interesting things that matter.
+                    You can find my résumé <a href="static/resume/Sriram Vasudevan resume.pdf" download="Sriram Vasudevan resume">here</a>.
                 </p>
             </div>
         </div>
