--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
     <title>Siram Vasudevan</title>
 </head>
 <body>
+
     <section class="first-section" id="first-section">
-        <h1>Sriram <span>Vasudevan</span></h1>
-        <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
+        <div class="container">
+            <h1>Sriram <span>Vasudevan</span></h1>
+            <div class="socials">
+                <a href=""><img src="static/mail.svg" alt=""></a>
+                <a href=""><img src="static/discord.svg" alt=""></a>
+                <a href=""><img src="static/github.svg" alt=""></a>
+                <a href=""><img id="linkedin" src="static/linkedin.svg" alt=""></a>
+            </div>
+        </div>
+        <a href="#second-section" id="down-arrow"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
     </section>
+
     <section class="second-section" id="second-section">
         <a href="#first-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
         <div class="out">
@@ -30,6 +40,7 @@
         </div>
         <a href="#third-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
     </section>
+
     <section class="third-section" id="third-section">
         <a href="#second-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
         <div class="skills">
@@ -43,23 +54,24 @@
         <a href="#fourth-section"><img class="scroll-icon" src="static/scroll-icon-down.svg" alt=""></a>
 
     </section>
+
     <section class="fourth-section" id="fourth-section">
         <a href="#third-section"><img class="scroll-icon" src="static/scroll-icon-up.svg" alt=""></a>
-        <div class="contact">
-            <div class="contact-part-1">
-                <h1>Contact me</h1>
-            </div>
-            <div class="contact-part-2">
-                <p>{</p>
-            </div>
-            <div class="contact-part-3">
-                <a href="mailto:srriram2002.31@gmail.com"><img src="static/gmail.svg" alt="gmail"></a><br>
-                <a href="https://github.com/Sriram-bb63"><img src="static/github.svg" alt="github"></a><br>
-                <a href="https://discordapp.com/users/576274954367139850"><img src="static/discord.svg" alt="discord"></a><br>
-                <a href="https://www.linkedin.com/in/sriram-vasudevan-0812/"><img src="static/linkedin.svg" alt="linkedin"></a>
-            </div>
+        <div class="container">
+            <img src="static/terminal.png" alt="">
         </div>
         <a href="#first-section"><img class="scroll-icon" src="static/double-scoll.svg" alt=""></a>
     </section>
+
+    <footer>
+        <div class="left">
+            <p>Copyright © 2022</p>
+        </div>
+        <div class="right">
+            <p>Designed and built by</p>
+            <p>Sriram Vasudevan</p>
+        </div>
+    </footer>
+
 </body>
 </html>
